# 2686V_2686VFX

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  arm64-linux-toolchain.cmake  gen_2686VFX_solution.bat  gen_2686V_solution.bat  readme.en.md  readme.md
2686V/: CMakeLists.txt
2686V/Source/: AdpcmCore.h  FileConstants.h  FmCommon.h  GlobalConstants.h  GuiConstants.h  GuiStructs.h  LabelConstants.h  Mode.h  OpConstants.h  OpValueRange.h  Opl3Core.h  OplCore.h  OpllCore.h  OpmCore.h  OpnCore.h  OpnaCore.h  Opzx3Core.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PrAdpcm.h  PrBase.h  PrFx.h  PrOpl.h  PrOpl3.h  PrOpm.h  PrOpn.h  PrOpna.h  PrOpzx3.h  PrRhythm.h  PrSsg.h  PrWt.h  PresetConstants.h  RegisterConverter.h  RhythmCore.h  SSGCore.h  SimpleEffects.h  SynthVoice.h  WavetableCore.h
2686V/Source/ABOUT/: GuiAbout.cpp  GuiAbout.h
2686V/Source/ADPCM/: AdpcmCore.cpp  AdpcmCore.h  GuiAdpcm.cpp  GuiAdpcm.h  PrAdpcm.cpp  PrAdpcm.h
2686V/Source/Advanced/Curve/: AdvancedCurve.cpp  AdvancedCurve.h  AdvancedCurveParams.h  Core.cpp  Core.h  Params.h
2686V/Source/BEEP/: BeepCore.cpp  BeepCore.h  BeepParams.h  GuiBeep.cpp  GuiBeep.h  PrBeep.cpp  PrBeep.h
2686V/Source/Core/Const/: ConstFileValues.h  ConstGlobal.h  FileValues.h  Global.h  MmlKeys.h  MmlValues.h  PrKeys.h  PrNames.h  PrValues.h  PresetKeys.h  SettingsKeys.h  SettingsValues.h
2686V/Source/Core/Editor/: EditorGuiText.h  EditorGuiValues.h  GuiText.h  GuiValues.h  PluginEditor.cpp  PluginEditor.h
2686V/Source/Core/Effect/: RateLUT.h
2686V/Source/Core/Fm/: FmClipboard.h  FmCore.cpp  FmCore.h  FmMmlFormatter.h  FmOpParams.h  FmOperator.cpp  FmOperator.h  FmRegisterConverter.cpp  FmRegisterConverter.h  FmSliderRegMap.cpp  FmSliderRegMap.h  RegisterConverter.cpp  RegisterConverter.h  SliderRegMap.h
2686V/Source/Core/Gui/: GuiBase.cpp  GuiBase.h  GuiColor.h  GuiComponents.cpp  GuiComponents.h  GuiContext.h  GuiCopyObj.h  GuiEnvelopeGraph.cpp  GuiEnvelopeGraph.h  GuiHelpers.cpp  GuiHelpers.h  GuiLF.cpp  GuiLF.h  GuiStructs.h  GuiText.h  GuiValues.h
2686V/Source/Core/Processor/: Base.cpp  Base.h  Keys.h  Names.h  PluginProcessor.cpp  PluginProcessor.h  PluginProcessorStateKey.h  PrBase.cpp  PrBase.h  ProcessorBase.cpp  ProcessorBase.h  ProcessorKeys.h  ProcessorNames.h  ProcessorValues.h  Values.h
2686V/Source/Core/Synth/: AdsrParams.h  Mode.cpp  Mode.h  SynthCore.h  SynthHelpers.cpp  SynthHelpers.h  SynthMode.h  SynthParams.h  SynthVoice.cpp  SynthVoice.h
2686V/Source/Effect/Feedback/: Feedback.cpp  Feedback.h
2686V/Source/Effect/Fx/: Core.cpp  Core.h  Fx.cpp  Fx.h  FxCore.cpp  FxCore.h  Params.h
2686V/Source/Effector/Fx/: Core.cpp  Core.h
2686V/Source/FX/: FxCore.cpp  FxCore.h  FxParams.h  GuiFx.cpp  GuiFx.h  PrFx.cpp  PrFx.h
2686V/Source/Generator/Fm/: RegisterConverter.cpp  RegisterConverter.h  RegisterType.h
2686V/Source/Generator/Pcm/: Core.cpp  GenPcm.cpp  GenPcm.h  Pcm.cpp
2686V/Source/Gui/About/: Core.cpp  Core.h  Gui.cpp  GuiAbout.cpp  GuiAbout.h  GuiAboutText.h  GuiAboutValues.h  GuiText.h  GuiValues.h
2686V/Source/Gui/Adpcm/: Core.cpp  Core.h  Gui.cpp  GuiAdpcm.cpp  GuiAdpcm.h  GuiAdpcmHelpers.cpp  GuiAdpcmHelpers.h  GuiAdpcmText.h  GuiAdpcmValues.h  GuiHelpers.cpp  GuiHelpers.h  GuiText.h  GuiValues.h
2686V/Source/Gui/Beep/: Core.cpp  Core.h  Gui.cpp  GuiBeep.cpp  GuiBeep.h  GuiBeepText.h  GuiBeepValues.h  GuiText.h  GuiValues.h
2686V/Source/Gui/Curve/: Core.cpp  Core.h  GuiCurve.cpp  GuiCurve.h  GuiCurveGraph.cpp  GuiCurveGraph.h  GuiCurveText.h  GuiText.h  GuiValues.h
2686V/Source/Gui/Fx/: Core.cpp  Core.h  Gui.cpp  GuiFx.cpp  GuiFx.h  GuiFxText.h  GuiText.h  (+2 more)
2686V/Source/OPL/: GuiOpl.cpp  GuiOpl.h  OplCore.cpp  OplCore.h  OplOperator.cpp  OplOperator.h  OplParams.h  PrOpl.cpp  PrOpl.h
2686V/Source/OPL3/: GuiOpl3.cpp  GuiOpl3.h  Opl3Core.cpp  Opl3Core.h  Opl3Operator.cpp  Opl3Operator.h  Opl3Params.h  PrOpl3.cpp  PrOpl3.h
2686V/Source/OPM/: GuiOpm.cpp  GuiOpm.h  OpmCore.cpp  OpmCore.h  OpmOperator.cpp  OpmOperator.h  OpmParams.h  PrOpm.cpp  PrOpm.h
2686V/Source/OPN/: GuiOpn.cpp  GuiOpn.h  OpnCore.cpp  OpnCore.h  OpnOperator.cpp  OpnOperator.h  OpnParams.h  PrOpn.cpp  PrOpn.h
2686V/Source/OPNA/: GuiOpna.cpp  GuiOpna.h  OpnaCore.cpp  OpnaCore.h  OpnaOperator.cpp  OpnaOperator.h  OpnaParams.h  PrOpna.cpp  PrOpna.h
2686V/Source/OPZX3/: GuiOpzx3.cpp  GuiOpzx3.h  Opzx3Core.cpp  Opzx3Core.h  Opzx3Operator.cpp  Opzx3Operator.h  Opzx3Params.h  PrOpzx3.cpp  PrOpzx3.h
2686V/Source/PRESET/: GuiPreset.cpp  GuiPreset.h
2686V/Source/RHYTHM/: GuiRhythm.cpp  GuiRhythm.h  PrRhythm.cpp  PrRhythm.h  RhythmCore.cpp  RhythmCore.h
2686V/Source/SETTINGS/: GuiSettings.cpp  GuiSettings.h
2686V/Source/SSG/: GuiSsg.cpp  GuiSsg.h  PrSsg.cpp  PrSsg.h  SsgCore.cpp  SsgCore.h  SsgParams.h
2686V/Source/WT/: GuiWt.cpp  GuiWt.h  PrWt.cpp  PrWt.h  WtCore.cpp  WtCore.h  WtParams.h
2686V/Source/const/: FileConstants.h  GlobalConstants.h  PresetConstants.h
2686V/Source/core/: FileValues.h  Global.h  GlobalConstants.h  GuiConstants.h  GuiSelectItems.h  GuiText.h  GuiValues.h  MmlKeys.h  MmlValues.h  OpConstants.h  OpValueRange.h  PrBase.cpp  PrBase.h  PrFile.cpp  PrFile.h  PrKeys.h  PrNames.h  PrValues.h  PresetKeys.h  PresetValues.h  SettingsValues.h
2686V/Source/editor/: PluginEditor.cpp  PluginEditor.h
2686V/Source/fm/: FmCommon.cpp  FmCommon.h  FmCore.cpp  FmCore.h  FmOperator.cpp  FmOperator.h  MmlConstants.h  OpValueRange.h  RegisterConverter.cpp  RegisterConverter.h  RegisterType.h  SliderRegMap.cpp
2686V/Source/gui/: GuiBase.h  GuiColor.h  GuiComponents.cpp  GuiComponents.h  GuiConstants.h  GuiContext.h  GuiFile.cpp  GuiHelpers.cpp  GuiHelpers.h  GuiLF.cpp  GuiLF.h  GuiStructs.h  GuiText.h  GuiValues.h  LabelConstants.h
2686V/Source/processor/: PluginProcessor.cpp  PluginProcessor.h  PrBase.cpp
2686V/Source/synth/: Mode.h  Pcm.cpp  Pcm.h  SynthCore.cpp  SynthCore.h  SynthHelpers.cpp  SynthHelpers.h  SynthParams.h  SynthVoice.cpp  SynthVoice.h
2686VFX/: CMakeLists.txt
2686VFX/Source/: PluginProcessor.cpp  PluginProcessor.h
(+672 files in other folders)
